--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,14 +12,32 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/nav_gallery"
-        android:name="com.android.medicheck.patient.ui.gallery.GalleryFragment"
-        android:label="@string/menu_gallery"
-        tools:layout="@layout/fragment_gallery" />
+        android:id="@+id/nav_patient"
+        android:name="com.android.medicheck.patient.PatientsFragment"
+        android:label="@string/patient"
+        tools:layout="@layout/fragment_patients" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.android.medicheck.patient.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_consultation"
+        android:name="com.android.medicheck.patient.ConsultationFragment"
+        android:label="@string/consultation"
+        tools:layout="@layout/fragment_consultation" />
+
+    <fragment
+        android:id="@+id/nav_appointment"
+        android:name="com.android.medicheck.patient.AppointmentFragment"
+        android:label="@string/appointment"
+        tools:layout="@layout/fragment_appointment" />
+
+    <fragment
+        android:id="@+id/nav_hospital"
+        android:name="com.android.medicheck.patient.HospitalFragment"
+        android:label="@string/hospital"
+        tools:layout="@layout/fragment_hospital" />
+
+    <fragment
+        android:id="@+id/nav_help"
+        android:name="com.android.medicheck.patient.HelpFragment"
+        android:label="@string/help"
+        tools:layout="@layout/fragment_help" />
 </navigation>
