Suppression de fragments et ajouts de ListView,modification de l'emplacement des fragments home help et hospital dans un dossier commun a tous

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.android.medicheck.patient.ui.home.HomeFragment"
+        android:name="com.android.medicheck.commons.HomeFragment"
         android:label="@string/menu_home"
         tools:layout="@layout/fragment_home" />
 
