admin home and navigation

--- a/app/src/main/res/navigation/mobile_navigation2.xml
+++ b/app/src/main/res/navigation/mobile_navigation2.xml
@@ -7,37 +7,27 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.android.medicheck.commons.HomeFragment"
+        android:name="com.android.medicheck.admin.homeAdminFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home" />
+        tools:layout="@layout/activity_user" />
 
     <fragment
-        android:id="@+id/nav_patient"
-        android:name="com.android.medicheck.admin.PatientAdminFragment"
-        android:label="@string/patient"
-        tools:layout="@layout/fragment_patient_admin" />
-
-    <fragment
-        android:id="@+id/nav_consultation"
-        android:name="com.android.medicheck.admin.ConsultationAdminFragment"
-        android:label="@string/consultation"
-        tools:layout="@layout/fragment_consultation_admin" />
-
-    <fragment
-        android:id="@+id/nav_appointment"
+        android:id="@+id/nav_appointment_admin"
         android:name="com.android.medicheck.admin.AppointmentAdminFragment"
         android:label="@string/appointment"
         tools:layout="@layout/fragment_appointment_admin" />
 
     <fragment
-        android:id="@+id/nav_hospital"
-        android:name="com.android.medicheck.commons.HospitalFragment"
-        android:label="@string/hospital"
-        tools:layout="@layout/fragment_hospital" />
+        android:id="@+id/nav_consultation_admin"
+        android:name="com.android.medicheck.admin.ConsultationAdminFragment"
+        android:label="@string/consultation"
+        tools:layout="@layout/fragment_consultation_admin" />
 
     <fragment
-        android:id="@+id/nav_help"
-        android:name="com.android.medicheck.commons.HelpFragment"
-        android:label="@string/help"
-        tools:layout="@layout/fragment_help" />
+        android:id="@+id/nav_patient_admin"
+        android:name="com.android.medicheck.admin.PatientAdminFragment"
+        android:label="@string/patient"
+        tools:layout="@layout/fragment_patient_admin" />
+
+
 </navigation>
