--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -15,11 +15,12 @@
         android:layout_height="match_parent" />
 
     <com.google.android.material.navigation.NavigationView
-        android:id="@+id/nav_view"
+        android:id="@+id/nav_view_admin"
+        android:paddingTop="@dimen/top"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_admin"
-        app:menu="@menu/activity_main_drawer" />
+        app:menu="@menu/activity_main_drawer_admin" />
 </androidx.drawerlayout.widget.DrawerLayout>
