--- a/app/src/main/res/layout/fragment_appointment_admin.xml
+++ b/app/src/main/res/layout/fragment_appointment_admin.xml
@@ -6,7 +6,7 @@
     tools:context=".admin.AppointmentAdminFragment">
 
     <ListView
-        android:id="@+id/listPatient"
+        android:id="@+id/listAppointmentAdmin"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
