--- a/app/src/main/res/layout/fragment_consultation.xml
+++ b/app/src/main/res/layout/fragment_consultation.xml
@@ -3,10 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".patient.ConsultationFragment">
+    tools:context=".patient.ConsultationFragment"
+    >
 
     <ListView
-        android:id="@+id/listPatient"
+        android:id="@+id/listConsultation"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         />
