--- a/app/src/main/res/layout/fragment_appointment_admin.xml
+++ b/app/src/main/res/layout/fragment_appointment_admin.xml
@@ -1,14 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".admin.AppointmentAdminFragment">
+
+    <Button
+        android:id="@+id/btnAddAppointment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/add_appointment"
+        android:layout_marginBottom="3mm"
+        />
 
     <ListView
         android:id="@+id/listAppointmentAdmin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+
+</LinearLayout>
