--- a/app/src/main/res/layout/fragment_appointment.xml
+++ b/app/src/main/res/layout/fragment_appointment.xml
@@ -5,11 +5,20 @@
     android:layout_height="match_parent"
     tools:context=".patient.AppointmentFragment">
 
+    <Button
+        android:id="@+id/list_all"
+        android:layout_gravity="center_horizontal"
+        android:layout_width="match_parent"
+        android:layout_margin="@dimen/all"
+        android:layout_height="48dp"
+        android:text="list Appointment" />
+
     <ListView
         android:id="@+id/listAppointment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/blue_sky"
+        android:layout_marginTop="100dp"
         />
 
 </FrameLayout>
