--- a/app/src/main/res/layout/fragment_add_appointment.xml
+++ b/app/src/main/res/layout/fragment_add_appointment.xml
@@ -15,16 +15,18 @@
         android:layout_marginBottom="5mm"
         />
 
-<!--    <EditText-->
-<!--        android:id="@+id/txtDate"-->
-<!--        android:hint="@string/date"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:inputType="datetime"-->
-<!--        />-->
-    <DatePicker
+    <TextView
+        android:id="@+id/tvDate"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="@string/date"
+        android:gravity="center"
+        android:layout_marginBottom="5mm"
+        android:textSize="20sp"
+        />
+
+
+
 
     <EditText
         android:id="@+id/txtMotif"
@@ -32,6 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
+        android:layout_marginBottom="3mm"
         />
 
     <Button
