--- a/app/src/main/res/layout/fragment_medical_file.xml
+++ b/app/src/main/res/layout/fragment_medical_file.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".patient.ConsultationFragment"
-    >
+    tools:context=".patient.MedicalFileFragment">
 
-
-    <ListView
-        android:id="@+id/listConsultation"
+    <TextView
+        android:id="@+id/tvMedicalFile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         />
 
-</LinearLayout>
+</FrameLayout>
