--- a/app/src/main/res/menu/activity_patient_drawer.xml
+++ b/app/src/main/res/menu/activity_patient_drawer.xml
@@ -8,6 +8,12 @@
             android:id="@+id/nav_home"
             android:icon="@drawable/ic_home"
             android:title="@string/menu_home" />
+
+        <item
+            android:id="@+id/nav_medical_file"
+            android:icon="@drawable/ic_medical_file"
+            android:title="@string/medical_file" />
+
         <item
             android:id="@+id/nav_consultation"
             android:icon="@drawable/ic_consultation"
