--- a/app/src/main/res/layout/activity_user.xml
+++ b/app/src/main/res/layout/activity_user.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/all"
-    tools:context=".UserActivity">
+    tools:context=".PatientActivity">
 
     <TextView
         android:textStyle="bold"
