--- a/app/src/main/res/layout/fragment_consultation_admin.xml
+++ b/app/src/main/res/layout/fragment_consultation_admin.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".admin.ConsultationAdminFragment">
 
     <Button
@@ -10,12 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_consultation"
+        android:layout_margin="@dimen/all"
         />
 
     <ListView
         android:id="@+id/listConsultationAdmin"
+        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        />
+        android:layout_height="match_parent" />
 
-</FrameLayout>
+</LinearLayout>
