--- a/app/src/main/res/layout/fragment_appointment_admin.xml
+++ b/app/src/main/res/layout/fragment_appointment_admin.xml
@@ -11,13 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/add_appointment"
-        android:layout_marginBottom="3mm"
+       android:layout_margin="@dimen/all"
         />
 
     <ListView
         android:id="@+id/listAppointmentAdmin"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp"/>
 
 
 </LinearLayout>
