--- a/app/src/main/res/layout/fragment_medical_file.xml
+++ b/app/src/main/res/layout/fragment_medical_file.xml
@@ -1,14 +1,90 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".patient.MedicalFileFragment">
 
     <TextView
-        android:id="@+id/tvMedicalFile"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:text="@string/medical_file"
+        android:textSize="@dimen/title"
+        android:textStyle="italic"
+        android:textAlignment="center"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
 
-</FrameLayout>
+        />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_marginLeft="@dimen/left"
+        android:background="@color/purple_500"
+        android:scrollbarStyle="insideInset">
+
+    <TextView
+        android:id="@+id/tvNom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="test"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:textStyle="italic"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
+        />
+    <TextView
+        android:id="@+id/tvPrenom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:text="test"
+        android:textStyle="italic"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
+        />
+    <TextView
+        android:id="@+id/tvSexe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:text="test"
+        android:textStyle="italic"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
+        />
+    <TextView
+        android:id="@+id/tvdate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:text="test"
+        android:textStyle="italic"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
+        />
+    <TextView
+        android:id="@+id/tvpoids"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:textColor="@color/white"
+        android:text="test"
+        android:textStyle="italic"
+        android:textAlignment="viewStart"
+        android:layout_marginTop="@dimen/top"
+        android:layout_margin="@dimen/all"
+        />
+    </LinearLayout>
+</LinearLayout>
