--- a/app/src/main/res/layout/fragment_patient_admin.xml
+++ b/app/src/main/res/layout/fragment_patient_admin.xml
@@ -11,13 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_margin="@dimen/all"
-        android:text="@string/add_patient"/>
+        android:text="@string/add_patient"
+        android:backgroundTint="@color/teal_700"
+        />
 
     <ExpandableListView
         android:id="@+id/listPatient"
-        android:layout_marginTop="50dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        />
+        android:layout_marginTop="50dp" />
 
 </LinearLayout>
