--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,15 +5,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="@dimen/all"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@color/eggshell">
 
     <TextView
         android:textStyle="bold"
         android:textSize="@dimen/title"
         android:gravity="center"
         android:text="@string/connection"
+        android:textColor="@color/teal_700"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="100dp"/>
 
     <EditText
         android:id="@+id/txtLogin"
@@ -21,9 +24,11 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/top"
         android:hint="@string/login"
+        android:textColor="@color/teal_700"
         android:minHeight="48dp"
         android:autofillHints=""
-        android:inputType="text" />
+        android:inputType="text"
+        android:layout_marginBottom="10dp"/>
 
     <EditText
         android:id="@+id/txtPassword"
@@ -32,13 +37,15 @@
         android:layout_marginTop="@dimen/top"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:textColor="@color/teal_700"
         android:minHeight="48dp"
         android:textColorHint="#757575"
-        android:autofillHints="" />
+        android:autofillHints=""
+        android:layout_marginBottom="10dp"/>
 
     <Button
         android:id="@+id/btnConnect"
-        android:backgroundTint="@color/blue_dark"
+        android:backgroundTint="@color/teal_700"
         android:layout_marginEnd="@dimen/right"
         android:layout_marginStart="@dimen/left"
         android:layout_marginTop="@dimen/top"
