--- a/app/src/main/res/layout/fragment_add_appointment.xml
+++ b/app/src/main/res/layout/fragment_add_appointment.xml
@@ -12,6 +12,8 @@
         android:textSize="24sp"
         android:layout_height="wrap_content"
         android:text="@string/add_appointment"
+        android:background="@color/teal_700"
+        android:textColor="@color/white"
         android:layout_marginBottom="5mm"
         />
 
@@ -26,16 +28,14 @@
         />
 
 
-
-
     <EditText
         android:id="@+id/txtMotif"
-        android:hint="@string/reason"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"
         android:layout_marginBottom="3mm"
-        />
+        android:hint="@string/reason"
+        android:inputType="text"
+        android:minHeight="48dp" />
 
     <Button
         android:id="@+id/btnSaveAppointment"
