--- a/app/src/main/res/layout/fragment_add_consultation.xml
+++ b/app/src/main/res/layout/fragment_add_consultation.xml
@@ -12,6 +12,8 @@
         android:textSize="24sp"
         android:layout_height="wrap_content"
         android:text="@string/add_consultation"
+        android:background="@color/teal_700"
+        android:textColor="@color/white"
         android:layout_marginBottom="5mm"
         />
 
