--- a/app/src/main/res/layout/fragment_medical_file.xml
+++ b/app/src/main/res/layout/fragment_medical_file.xml
@@ -14,6 +14,7 @@
         android:textStyle="italic"
         android:textAlignment="center"
         android:layout_gravity="center_horizontal"
+        android:textColor="@color/teal_700"
         android:layout_marginTop="@dimen/top"
         android:layout_margin="@dimen/all"
 
@@ -23,7 +24,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:layout_marginLeft="@dimen/left"
-        android:background="@color/purple_500"
+        android:background="@color/teal_700"
         android:scrollbarStyle="insideInset">
 
     <TextView
